feat: add password strength logic and styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="input-field">
             <input type="password" id="password" placeholder="Enter Your password">
-            <span class="toggle-btn" id="toggleBtn"></span>
+            <span class="toggle-btn" id="toggleBtn">show</span>
         </div>
         <div class="strength-meter">
             <div class="strength-bar" id="strengthBar"></div>
@@ -21,6 +21,7 @@
         <p id="strengthText">Start typing....</p>
     </div>
 
+    <script src="script.js"></script>
 
 
 </body>
